--- a/languages/tap-fr_CA.po
+++ b/languages/tap-fr_CA.po
@@ -1,44 +1,44 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Twitter @Anywhere Plus\n"
+"Project-Id-Version: Twitter @Anywhere Plus 1.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-10 19:03+0100\n"
-"PO-Revision-Date: 2010-05-10 19:03+0100\n"
+"POT-Creation-Date: 2010-05-10 19:04+0100\n"
+"PO-Revision-Date: 2010-05-10 19:05+0100\n"
 "Last-Translator: Charles Desaulniers <charles.des@gmail.com>\n"
-"Language-Team: Marcis G. <by.marcis@gmail.com>\n"
+"Language-Team: siliticx.ca <charles.des@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: ..\n"
-"X-Poedit-Language: Belarusian\n"
-"X-Poedit-Country: BELARUS\n"
+"X-Poedit-Language: French\n"
+"X-Poedit-Country: CANADA\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: twitter-anywhere-plus.php:78
 msgid "Options saved."
-msgstr "Опцыі захаваны."
+msgstr "Paramètres sauvegardés."
 
 #: twitter-anywhere-plus.php:110
 msgid "In order to use @Anywhere, you must first register your blog for a free API key with Twitter.<br />You can do so at the following URL:"
-msgstr "Для таго, каб выкарыстоўваць @Anywhere, вы павінны спачатку зарэгістраваць свой блог для атрымання бясплатнага ключа API з Twitter. <br /> Гэта можна зрабіць па наступным адрасе:"
+msgstr "Afin d'utiliser @Anywhere, vous devez enregistrer votre blog au près de Twitter et obtenir une clé d'API.<br />Vous pouvez l'obtenir a cette adresse:"
 
 #: twitter-anywhere-plus.php:111
 msgid "Your @Anywhere API key:"
-msgstr "Ваш @Anywhere API ключ:"
+msgstr "Votre clé d'API @Anywhere:"
 
 #: twitter-anywhere-plus.php:112
 msgid "@Anywhere features"
-msgstr "@Anywhere магчымасці"
+msgstr "Fonctionnalités @Anywhere"
 
 #: twitter-anywhere-plus.php:117
 msgid "Auto-linkification of @usernames"
-msgstr "Аўта-linkification @usernames"
+msgstr "Auto-création de liens des @noms d'utilisateurs"
 
 #: twitter-anywhere-plus.php:118
 msgid "Turn Twitter usernames into links."
-msgstr "Уключыць імёны карыстачоў Twitter у спасылкі."
+msgstr "Transforme les @nom d'utilisateurs en lien automatiquement."
 
 #: twitter-anywhere-plus.php:126
 msgid "Hovercards"
@@ -46,77 +46,77 @@ msgstr "Hovercards"
 
 #: twitter-anywhere-plus.php:127
 msgid "Show hovercard when you move the mouse over a Twitter username."
-msgstr "Паказаць hovercard, калі вы перасоўваеце паказальнік мышы на імя карыстача Twitter."
+msgstr "Montrer une Hovercard quand on passe la souris sur un nom d'utilisateur Twitter."
 
 #: twitter-anywhere-plus.php:135
 msgid "Follow button"
-msgstr "Кнопка Follow"
+msgstr "Bouton Follow"
 
 #: twitter-anywhere-plus.php:136
 msgid "Show a follow button where you want it to be placed."
-msgstr "Паказаць кнопку button там, дзе яна павінна знаходзіцца."
+msgstr "Montrer un bouton follow là où vous le désirez."
 
 #: twitter-anywhere-plus.php:139
 msgid "Twitter username:"
-msgstr "Імя карыстача Twitter:"
+msgstr "Nom d'utilisateur Twitter:"
 
 #: twitter-anywhere-plus.php:143
 #: twitter-anywhere-plus.php:150
 #: twitter-anywhere-plus.php:152
 msgid "DOM element:"
-msgstr "DOM элемент:"
+msgstr "Élement du DOM:"
 
 #: twitter-anywhere-plus.php:147
 msgid "The <em>id</em> or <em>class</em> of the element (div, p) where the button must be inserted."
-msgstr "<em>id</em> ці <em>клас</em> элемента (div, p), дзе кнопка павінна быць усталявана."
+msgstr "L'<em>id</em> ou la <em>classe</em> de l'élément (div, p) où vous voulez que le bouton soit placé."
 
 #: twitter-anywhere-plus.php:148
 #: twitter-anywhere-plus.php:186
 #: twitter-anywhere-plus.php:199
 #: twitter-anywhere-plus.php:251
 msgid "Example:"
-msgstr "Прыклад:"
+msgstr "Exemple:"
 
 #: twitter-anywhere-plus.php:149
 msgid "You can create a Text widget with the following code inside:"
-msgstr "Вы можаце стварыць тэкставы виджет з наступным кодам усярэдзіне:"
+msgstr "Vous pouvez créer une widget de type Text avec le code suivant a l'intérieur:"
 
 #: twitter-anywhere-plus.php:151
 msgid "You can also use classes:"
-msgstr "Вы таксама можаце выкарыстоўваць класы:"
+msgstr "Vous pouvez utiliser aussi des classes:"
 
 #: twitter-anywhere-plus.php:163
 msgid "Tweet Box"
-msgstr ""
+msgstr "Boite à tweet"
 
 #: twitter-anywhere-plus.php:164
 msgid "Show a tweet box below your posts."
-msgstr ""
+msgstr "Montrer une boite a tweet sous vos articles."
 
 #: twitter-anywhere-plus.php:167
 msgid "Width:"
-msgstr ""
+msgstr "Largeur:"
 
 #: twitter-anywhere-plus.php:168
 #: twitter-anywhere-plus.php:172
 #: twitter-anywhere-plus.php:176
 #: twitter-anywhere-plus.php:241
 msgid "Default:"
-msgstr ""
+msgstr "Défaut:"
 
 #: twitter-anywhere-plus.php:171
 msgid "Height:"
-msgstr ""
+msgstr "Hauteur:"
 
 #: twitter-anywhere-plus.php:175
 #: twitter-anywhere-plus.php:240
 msgid "Label:"
-msgstr ""
+msgstr "Libellé:"
 
 #: twitter-anywhere-plus.php:179
 #: twitter-anywhere-plus.php:244
 msgid "Content:"
-msgstr ""
+msgstr "Contenu:"
 
 #: twitter-anywhere-plus.php:183
 #: twitter-anywhere-plus.php:248
@@ -160,7 +160,7 @@ msgstr ""
 #: twitter-anywhere-plus.php:374
 #: twitter-anywhere-plus.php:425
 msgid "What's happening?"
-msgstr ""
+msgstr "Quoi de neuf??"
 
 #: twitter-anywhere-plus.php:220
 msgid "empty"
@@ -172,11 +172,12 @@ msgstr ""
 
 #: twitter-anywhere-plus.php:233
 msgid "Retweet button"
-msgstr ""
+msgstr "Bouton Retweet"
 
 #: twitter-anywhere-plus.php:234
+#, fuzzy
 msgid "Show a \"Retweet\" button on the top/bottom right corner of your posts.<br />(Clicking the button will launch a Tweet Box with a Lightbox effect.)"
-msgstr ""
+msgstr "Afficher un bouton \"Retweet\" en haut a droite de vos articles.<br />(Cliquer sur le bouton ouvrira une boîte a tweet avec un effet Lightbox.)"
 
 #: twitter-anywhere-plus.php:237
 msgid "Button position:"
@@ -192,21 +193,21 @@ msgstr ""
 
 #: twitter-anywhere-plus.php:254
 msgid "Twitter bird:"
-msgstr ""
+msgstr "Oiseau Twitter:"
 
 #: twitter-anywhere-plus.php:254
 msgid "None"
-msgstr ""
+msgstr "Aucun"
 
 #: twitter-anywhere-plus.php:261
 msgid "Save changes"
-msgstr "Захаваць змены"
+msgstr "Sauvegarder les changements"
 
 #: twitter-anywhere-plus.php:264
 msgid "This plugin has been developed by <strong>GeekRMX</strong>."
-msgstr "Гэта ўбудова была распрацаваны <strong>GeekRMX</strong>."
+msgstr "Ce plugin a été développé par <strong>GeekRMX</strong>."
 
 #: twitter-anywhere-plus.php:266
 msgid "Website:"
-msgstr "Сайт:"
+msgstr "Site Web:"
 
